tests/grammar/invalid/entry-block-share-01.vit
entry main at core/app {
  share all
  return 0
}
